--- a/Product.API/appsettings.json
+++ b/Product.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=AuthDB;Username=postgres;Password=YOUR_PASS;",
+    "Redis": "localhost:6379"
+  },
+  "Jwt": {
+    "Secret": "YourSuperSecretKeyHereAtLeast32CharactersLong123!",
+    "Issuer": "Auth.API",
+    "Audience": "Product.API",
+    "ExpiryInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
