feat: docker fixes and some .http testing

--- a/Auth.API/appsettings.json
+++ b/Auth.API/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=AuthDB;Username=postgres;Password=YOUR_PASS;",
-    "Redis": "localhost:6379"
+    "DefaultConnection": "Host=localhost;Database=ProductAppDB;Username=postgres;Password=postgres;",
+    "Redis": "localhost:6379, abortConnect=false"
   },
+  "SkipRedisDuringMigrations": true,
   "Jwt": {
     "Secret": "YourSuperSecretKeyHereAtLeast32CharactersLong123!",
     "Issuer": "Auth.API",
