--- a/Product.API/Dockerfile
+++ b/Product.API/Dockerfile
@@ -3,8 +3,8 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
 # EF Tool
-RUN dotnet tool install --global dotnet-ef --version 9.0.8
-ENV PATH="$PATH:/root/.dotnet/tools"
+#RUN dotnet tool install --global dotnet-ef --version 9.0.8
+#ENV PATH="$PATH:/root/.dotnet/tools"
 
 # Copy project files
 COPY ["Product.API/Product.API.csproj", "Product.API/"]
@@ -25,6 +25,11 @@ RUN dotnet publish "Product.API.csproj" -c Release -o /app/publish
 # Runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
+
+# Just copy ef tool not entire SDKK
+#COPY --from=build /root/.dotnet/tools /root/.dotnet/tools
+#ENV PATH="$PATH:/root/.dotnet/tools"
+
 COPY --from=publish /app/publish .
 
 # Environment variables
