--- a/Auth.API/Dockerfile
+++ b/Auth.API/Dockerfile
@@ -1,10 +1,10 @@
-# Build aþamasý
+# Build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
 # EF Tool
-RUN dotnet tool install --global dotnet-ef --version 9.0.8
-ENV PATH="$PATH:/root/.dotnet/tools"
+#RUN dotnet tool install --global dotnet-ef --version 9.0.8
+#ENV PATH="$PATH:/root/.dotnet/tools"
 
 # Copy project files
 COPY ["Auth.API/Auth.API.csproj", "Auth.API/"]
@@ -17,13 +17,18 @@ COPY . .
 WORKDIR "/src/Auth.API"
 RUN dotnet build "Auth.API.csproj" -c Release -o /app/build
 
-# Publish aþamasý
+# Publish
 FROM build AS publish
 RUN dotnet publish "Auth.API.csproj" -c Release -o /app/publish
 
-# Runtime aþamasý
+# Runtime
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
+
+# Just copy ef tool not entire SDKK
+#COPY --from=build /root/.dotnet/tools /root/.dotnet/tools
+#ENV PATH="$PATH:/root/.dotnet/tools"
+
 COPY --from=publish /app/publish .
 
 # Environment variables
