--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   postgres:
     image: postgres:16
     environment:
-      POSTGRES_DB: ProductDB
+      POSTGRES_DB: ProductAppDB
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
@@ -38,7 +38,7 @@ services:
       - "7001:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=postgres;Database=AuthDB;Username=postgres;Password=postgres;
+      - ConnectionStrings__DefaultConnection=Host=postgres;Database=ProductAppDB;Username=postgres;Password=postgres;
       - ConnectionStrings__Redis=redis:6379
     depends_on:
       postgres:
@@ -56,7 +56,7 @@ services:
       - "7002:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=postgres;Database=ProductDB;Username=postgres;Password=postgres;
+      - ConnectionStrings__DefaultConnection=Host=postgres;Database=ProductAppDB;Username=postgres;Password=postgres;
       - ConnectionStrings__Redis=redis:6379
     depends_on:
       postgres:
@@ -66,6 +66,22 @@ services:
       auth-api:
         condition: service_started
     restart: unless-stopped
+
+  # EF Tooling Container (for migrations)
+  # ef-tools:
+  #   image: mcr.microsoft.com/dotnet/sdk:9.0
+  #   working_dir: /src
+  #   volumes:
+  #     - .:/src
+  #   entrypoint: ["dotnet"]
+  #   command: ["tool", "install", "--global", "dotnet-ef", "--version", "9.0.8"]
+  ef-tools:
+    build:
+        context: .
+        dockerfile: EfTools.Dockerfile
+    volumes:
+      - .:/src
+    working_dir: /src
 
 volumes:
   postgres_data:
